Fix layout scrollbars

--- a/SQLSchemaCompare.UI/wwwroot/css/Index.scss
+++ b/SQLSchemaCompare.UI/wwwroot/css/Index.scss
@@ -52,6 +52,10 @@ $fa-font-size-base: $font-size-base;
         }
     }
 }
+
+.monaco-editor.vs {
+    max-height: 0px; // Fix autoresize on focus
+}
 /*#endregion*/
 
 /*#region Toolbar */
@@ -96,6 +100,10 @@ $fa-font-size-base: $font-size-base;
     padding-bottom: $row-header-height;
     background-color: $background-color;
     overflow: auto;
+}
+
+.tcx-main-page {
+    height: calc(100vh - 36px);
 }
 
 .tcx-main-top {
